@@ -40,6 +40,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				PreprocessorDefinitions="_WINDOWS;WIN32;NDEBUG;_CONSOLE;DEBUG=5;EQDEBUG=5;SHAREMEM;CATCH_CRASH;i386;CHAT"
 				MinimalRebuild="true"
