@@ -43,6 +43,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/MP"
 				Optimization="0"
 				PreprocessorDefinitions="_WINDOWS;WORLD,_DEBUG,_EQDEBUG,i386,SHAREMEM,INVERSEXY,_WIN32,_WIN32_WINNT=0x0400,WIN32,_CONSOLE,FIELD_ITEMS,EMBPERL,EMBPERL_PLUGIN,EQDEBUG=5"
 				BasicRuntimeChecks="3"
@@ -465,6 +466,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\queryserv.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\ucs.cpp"
 				>
 			</File>
@@ -539,6 +544,10 @@
 			</File>
 			<File
 				RelativePath=".\net.h"
+				>
+			</File>
+			<File
+				RelativePath=".\queryserv.h"
 				>
 			</File>
 			<File
