@@ -5,7 +5,10 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 Secrets: Added QueryServ for VS2010 x86/x64. QueryServ allows queries to be sent to it for use on an external database, through the means of packets.
 Currently, the only thing it logs is a #command input, but that will be expanded onto soon. A suggestion for our developers would be to move any statistic logging stuff (hackers table, eventlog, etc) over to it eventually
 to save processing power on the main executable's machine. This will allow for things like discovered items to work a bit more better resource-wise.
-
+Akkadius: Added #advnpcspawn setversion (version#) - This will change the instance version in which the targeted NPC resides in
+Akkadius: Added #npcedit setanimation (stand, sit, crouch, dead, loot (0-4)) so that setting animations are much easier. This also makes animations much more reliable setting them with the spawn packet rather than through Perl.
+Akkadius: Added /MP switch to VS2008 so that it will compile with multiple processors
+Akkadius: Fixed compiles for VS2008 from the Queryserv commit
 
 Secrets: Added #qtest <string>, which will populate the remote database through QueryServ with information as a test only. Requires 255 status by default.
 
